@@ -1,3 +1,9 @@
+2002-01-28  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 02918] fixed scripts/w3mmail.cgi.in
+	* scripts/w3mmail.cgi.in: add width=80 for header field name
+	* scripts/w3mmail.cgi.in (url_unquote): use pack instead of chr
+
 2002-01-27  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
 
 	* [w3m-dev 02914]
@@ -2316,4 +2322,4 @@
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.265 2002/01/26 17:24:01 ukai Exp $
+$Id: ChangeLog,v 1.266 2002/01/27 18:59:57 ukai Exp $
